[package]
name = "raw-import"
version = "0.1.2"
edition = "2024"
authors = [
    "Kenneth Hedman <raw-import@vitberget.se>"
]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
config = "0.15.22"
futures-lite = "2.6.1"
log = "0.4.29"
log4rs = "1.4.0"
rexiv2 = { version = "0.10.0", features = ["raw-tag-access"] }
tokio = { version = "1.51.1", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tokio-macros = "2.7.0"
udisks2 = "0.3.1"
xdg = "3.0.0"
